--- a/public/css/style.css
+++ b/public/css/style.css
@@ -238,50 +238,70 @@ a.btn-bar{
 	text-align: center;
 }
       
-      .custom-wrapper.open {
-          height: 9em;
-      }
-      
-      .custom-menu-3 {
-          text-align: right;
-      }
-      
-      .custom-toggle {
-          width: 34px;
-          height: 34px;
-          display: block;
-          position: absolute;
-          top: 60px;
-          right: 20px;
-          display: none;
-      }
-      
-      .custom-toggle .bar {
-          background-color: #1abc9c;
-          display: block;
-          width: 20px;
-          height: 2px;
-          border-radius: 100px;
-          position: absolute;
-          top: 18px;
-          right: 7px;
-          
-	  }
-	  
-	  .buttons-social-media-share {
-		  margin-bottom: 20px;
-	  }
-	  
-	  .buttons-social-media-share .share-buttons {
-		  margin: 0;
-		  padding: 0;
-	  }
+.custom-wrapper.open {
+	height: 9em;
+}
 
-	  .buttons-social-media-share .share-buttons li {
-		list-style-type: none;
-		float: left;
-		margin-right: 10px;
-	  }
+.custom-menu-3 {
+	text-align: right;
+}
+
+.custom-toggle {
+	width: 34px;
+	height: 34px;
+	display: block;
+	position: absolute;
+	top: 60px;
+	right: 20px;
+	display: none;
+}
+
+.custom-toggle .bar {
+	background-color: #1abc9c;
+	display: block;
+	width: 20px;
+	height: 2px;
+	border-radius: 100px;
+	position: absolute;
+	top: 18px;
+	right: 7px;
+	
+}
+
+.buttons-social-media-share {
+	margin-bottom: 20px;
+}
+
+.buttons-social-media-share .share-buttons {
+	margin: 0;
+	padding: 0;
+}
+
+.buttons-social-media-share .share-buttons li {
+list-style-type: none;
+float: left;
+margin-right: 10px;
+}
+
+.overlay {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	width: 100%;
+	height: 100%;
+	position: absolute;
+	color: white;
+	font-size: 30px;
+	background-color: rgba(0,0,0, .7);
+}
+
+.gallery-photos {
+	overflow: hidden;
+}
+
+/* .carousel-inner .item .img {
+	width: 100%;
+} */
       
       
 
