--- a/public/css/style.css
+++ b/public/css/style.css
@@ -71,6 +71,12 @@ header nav li a:hover{
 .post .tag{
 	margin: 0 5px;
 }
+
+.post .tag a{
+	color: inherit;
+	font-size: inherit;
+}
+
 .post footer{
 	margin-top: 45px;
 	background: none;
